# data-deficient-plant-search

./: .gitignore  README.md  experiment.py  pyproject.toml  run.py  todos.txt
app/: package-lock.json  package.json
app/data/: gbif-amphibia.csv  gbif-aves.csv  gbif-fishes.csv  gbif-fungi.csv  gbif-mammalia.csv  gbif-plantae.csv  gbif-reptilia.csv  redlist-actinopterygii.json  redlist-chondrichthyes.json  redlist-fungi.json  redlist-gastropoda.json  redlist-mammalia.json
app/public/: plant_species_counts.json
app/public/experiments/: fraxinus_excelsior.json  quercus_robur.json  summary.json
app/public/experiments/logistic/: quercus_robur.json  summary.json
app/public/experiments/mlp/: quercus_robur.json  summary.json
app/scripts/: fetch-gbif-species.ts
app/src/app/: page.tsx
app/src/app/api/country/[code]/species/: route.ts
app/src/app/api/gbif/taxa/: route.ts
app/src/app/api/occurrences/: route.ts
app/src/app/api/redlist/species/[id]/: route.ts
app/src/app/api/redlist/taxa/: route.ts
app/src/app/api/search/: route.ts
app/src/app/api/species/: route.ts
app/src/app/api/species/[key]/: route.ts
app/src/app/experiment/: page.tsx
app/src/app/gbif/: page.tsx
app/src/components/: OccurrenceMapRow.tsx  TaxaIcon.tsx  WorldMap.tsx
app/src/components/gbif/: GBIFTaxaSummary.tsx
app/src/components/redlist/: RedListView.tsx  TaxaSummary.tsx
app/src/config/: taxa.ts
docs/: generate_plant_species_distribution_plots.py
finder/: __init__.py  methods.py  pipeline.py
