[project]
name = "data-deficient-plant-search"
version = "0.1.0"
description = "Identify candidate locations for collecting samples for data-deficient plant species using geospatial foundation model embeddings"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "requests>=2.32.5",
    "scikit-learn>=1.5.0",
    "rasterio>=1.4.0",
    "numpy>=2.0.0",
    "tqdm>=4.66.0",
]
